<resources>
    <string name="app_name">Group22_HW08</string>
    <string name="city_country">City, Country</string>
    <string name="weather">Current city not yet set</string>
    <string name="temp">Temperature</string>
    <string name="updated">Updated</string>
    <string name="city_name_i_e_charlotte">City Name ( i.e Charlotte )</string>
    <string name="country_i_e_us">Country Name ( i.e US )</string>
    <string name="search_city">Search City</string>
    <string name="no_cities">There are no cities to display.</string>
    <string name="search_cities">Search the city from search box and save.</string>
    <string name="set_current_city">Set Current City</string>
    <string name="settings">Settings</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="enter_your_country">Enter your Country</string>
    <string name="daily_forecast">Daily Forecase</string>
    <string name="headline">Headline</string>
    <string name="condition">Condition</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="click_here_for_more_details">Click here for more details</string>
    <string name="click_here_for_extended_forecast">Click here for extended forecast</string>
    <string name="save_city">Save City</string>
    <string name="seet_as_current_city">Set as current city</string>
    <string name="temp_unit">Temperature Unit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cityname_countryname">CityName, CountryName</string>
    <string name="tem">temperature</string>
    <string name="updated1">updated</string>
    <string name="city_not_set">Current city not set</string>
    <string name="pref_key_temp_unit">pref_key_temp_unit</string>
    <string name="choose_temp_unit">Choose Temperature unit</string>
    <string name="tempcelcius">Temperature unit set to Celsius</string>
    <string name="temp_fahren">Temperature unit set to Fahrenheit</string>
    <string name="api_key">9Ag3ZEDa3MWNkuow81Ix7AvtEaA2HWCB</string>

    <array name="listArray">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </array>
    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
