<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikhil.group22_hw08.MainActivity">

    <TextView
        android:id="@+id/cityCountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_country"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cityCountryTextView"
        android:text="@string/weather"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/setCurrentCityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/weatherTextView"
        android:text="@string/set_current_city"
        android:textAllCaps="false"/>
    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_below="@+id/weatherTextView"
        android:layout_margin="5dp"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_below="@+id/setCurrentCityButton"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/weatherImageView"
        android:text="@string/temp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/temperatureTextView"
        android:text="@string/updated"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeTextView"
        android:hint="@string/city_name_i_e_charlotte"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/countryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cityEditText"
        android:hint="@string/country_i_e_us"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/searchCityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/countryEditText"
        android:text="@string/search_city"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/noCitiesToDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/searchCityButton"
        android:textStyle="bold"
        android:text="@string/no_cities"/>

    <TextView
        android:id="@+id/searchCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/noCitiesToDisplay"
        android:textStyle="bold"
        android:text="@string/search_cities" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/searchCityButton">
    </android.support.v7.widget.RecyclerView>
</RelativeLayout>
