<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_container"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/silver"
        android:padding="5dp">

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/favorite_button"
            android:layout_toStartOf="@+id/favorite_button"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:text="@string/tem" />

        <TextView
            android:id="@+id/updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/favorite_button"
            android:layout_toStartOf="@+id/favorite_button"
            android:layout_below="@+id/temp"
            android:textStyle="bold"
            android:text="@string/updated1" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:background="#00ffffff"
            android:src="@drawable/star_gray"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/cityNameCountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/cityname_countryname"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>




</RelativeLayout>